# rust-coinbase

./: Cargo.toml
.github/workflows/: ci.yml
src/: builder.rs  derivator.rs  descriptor.rs  error.rs  lib.rs  script.rs  split.rs  subsidy.rs  validation.rs  witness.rs
tests/: known_blocks.rs
