[package]
name = "rust-coinbase"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"
description = "A Rust library for constructing and manipulating Bitcoin coinbase transactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/average-gary/rust-coinbase"
keywords = ["bitcoin", "mining", "coinbase", "transaction", "stratum"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/rand-std"]
serde = ["bitcoin/serde"]
descriptors = ["dep:miniscript"]

[dependencies]
bitcoin = { version = "0.32", default-features = false }
miniscript = { version = "13.0", default-features = false, optional = true }

[dev-dependencies]
hex = "0.4"
